# minop

./: .clang-format  .gitignore  .goreleaser.yaml  CMakeLists.txt  Makefile  README.md  README.zh-CN.md  go.mod  go.sum  main.go  requirements.txt
.github/workflows/: release.yml  test.yml
cmd/: action.go  check.go  cli.go  doc.go  host.go  info.go  root.go  task.go
examples/: host.list  hosts
minop/: __main__.py  modules.yaml
minop/actions/: action.py  command.py
minop/app/: client.py  hosts.py  modules.py  worker.py
minop/components/: mbutton.py  mcard.py  minput.py  msidebar.py
minop/ui/: components.py  default.css  minop_container.py  minop_header.py  minop_output.py  minop_sidebar.py  minop_window.py  stylesheet.py
pkg/action/: action.go
pkg/action/cmd/: cmd.go
pkg/action/command/: command.go
pkg/action/dir/: dir.go
pkg/action/file/: file.go
pkg/cli/: cli.go  options.go
pkg/constants/: constants.go
pkg/executor/: executor.go  loader.go  options.go  task.go
pkg/host/: host.go
pkg/hosts/: hosts.go
pkg/log/: log.go
pkg/logs/: log.go
pkg/manager/: docs.go  loader.go  manager.go
pkg/module/: argvalidator.go  module.go
pkg/operation/: baseoperation.go  opcopy.go  operation.go  opshell.go
pkg/remote/: host.go  host_test.go  pool.go  remote.go  remote_test.go
pkg/task/: options.go  task.go
pkg/utils/: fsutils.go  strutils.go  utils.go
pkg/version/: version.go
src/: dbmanager.cpp  dbmanager.h  exception.cpp  exception.h  hosts_dock.cpp  hosts_dock.h  main.cpp  main_window.cpp  main_window.h  tasks_dock.cpp  tasks_dock.h
(+9 files in other folders)
